@@ -4,6 +4,7 @@ DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r5-for-3.16.0.patch1 4049
 DIST README-v7r5-0.BFQ 20481 SHA256 3556af1e5317916c76be3a6ceb08348b67db18b824e55806cb5155f518d0a519 SHA512 73038b9962b7c5b3f0ec2d345f064b87a8d8391a562074a108372f9f48d68cc1f5dc918f058064a5974d09d72938cb21b8f228a3eff5ddf8e78b9570cae6bd16 WHIRLPOOL 9600f5443e373458ffcaab026c408b41d983785aa0aec6fb34ddb1a4224b980876a0b3c6081dc0a5dd52f31b64dddde07cdf2b4d14f6441a46485c057b85f4e4
 DIST aufs-sources-3.16_p20140818.tar.xz 160300 SHA256 2353972e8d9df0ee031b032669bc731f9aa7514ce27bcfb915e66bb5aee50d6e SHA512 95baadc549b5e99f83cb5698da1bf53cc161d96ef64f8613db384718c02fa4924953a73832b73419ded43dbca3c1af759b11f2bd6b47e31cbbd195be8a0df600 WHIRLPOOL f82c4e24e2df42b58d079d7b22923bbb0c4a5bce65e1f5d20da67e75dec0b4b9a058515f6267229f4abfc38dfe52e3c92a401a20b0fdf8abe26d9f88c1c46320
 DIST aufs-sources-3.16_p20140915.tar.xz 160732 SHA256 f09aac80964c3218d233a1012a58029e33bb50274ca3a7454ba00e11c38d1f2c SHA512 188a5226226a1760f5dc0a36d5c9cd807aa63089a900aeea0340a4d5eacfd6ec6e8a27cf9b8d0c319f835bc37aa4b300892d2155d1bb7ea8f2ad651f05df1803 WHIRLPOOL 68a572624ce77805be90f87a2b7073c7f14db8ea9894f7f9083359897f2d64e8478f0c64c483782fcc5d7039b0e4efd63f5b527f4fe1398b53aa8acaa3501a7c
+DIST aufs-sources-3.16_p20141006.tar.xz 160792 SHA256 b75868891eab6c111355061585059439511d64e808693972be9b7e9de575db30 SHA512 b5bed763a6633fcb8de9ddb11c7f08c1802c25fbd7b652828ead81e77155d8f45efcb8c320d35a9907eed9b09b3538fb55a9ab032672de55f7ed8158593e9513 WHIRLPOOL dbce16255aa4624c6abd78f7c993975562a7a4f1d10d863c87a46da95ca345562e6d8ed18af57c08f3fce81d2aa5edd9b7464cead7c612dc86f9937e6d46575c
 DIST deblob-3.16 127089 SHA256 36a4b6667d16cac9f4882f4c96a57c37ea2f7ef8ed9e128db3ee9f60fc7d95d6 SHA512 8c7edc649eb68c194ab05856bf7a0359b18793001c247e6e742a56daaca7c159787240634a79a042ac8f31338900d8afcd3c82883ba5398be43d4d63a1882dec WHIRLPOOL 17b3e1025a138a13d5a0a973802d899e3881694cfc59520197994fd93245d835b092cb976873d15cf8b9079562ed3fa62dba19d87a668dbb757ddedd13d12946
 DIST deblob-check-3.16 632725 SHA256 9647fc6ef8dc3ad7cadc511c0987664ba971892c3d4f733725d5b86e32caa4bf SHA512 4dd69ae9c7a98b1b5fc01de48282d4c4da196bd938ec55c2a82442d1134822693d517466db2ed4ebe8d46014a9dbe1c0ba2263cb21e49372dd0d0ace5ba3d504 WHIRLPOOL 5feadd7e44e6d9c633f58fc34b91c5ba4dc3105d8d9f3abb656cd15fc3603c3d68ad94d8d233fc47f5378a98988e8f9fa62fcddc4b7d1cba197ca7e9784445a6
 DIST genpatches-3.16-2.base.tar.xz 11984 SHA256 4e134e601992be75502e1d1378e653e664859150563f4e19f3cb1d3d0d22de88 SHA512 0d13aa991dac64061070303b23639afc27c52bab098187dda23efb5d7b1a9aba48f2a75adc80cf5b713f76852f3ab9f343ecfa465f1e21e0cc7b604a3b15acad WHIRLPOOL 2b68aa6dd6bbd43c1c299fffacd693d390f286727daadf64b799a3fbc77654bdf57b82503e5e3c9f9f91714e02b6a36f288753cbf05511886176df960e130f2d
@@ -12,6 +13,8 @@ DIST genpatches-3.16-3.base.tar.xz 62548 SHA256 6263f780ba964ddabffa97b25a20e614
 DIST genpatches-3.16-3.extras.tar.xz 17672 SHA256 8874fc85725f970a9812baa6e6fbfdaee657fb741214241832ea7f5e62d4899c SHA512 855b9a0463173dd721a16a6efb5e6ca412f0972a2450470fa875b28d3a213cd4095db720ab22147cf5cea900f7ddf4162c7c9adf6f9ceeb1b3d4171bcc441023 WHIRLPOOL 7e60f734738e06e64549c6b4fa0b8b837e0979878e1a1e46105f9c63d66bf320acc6484c57abc0efa266323ad86a9c276b6837f3f00b40f70d256d0863e30044
 DIST genpatches-3.16-4.base.tar.xz 114720 SHA256 62fcf6a199e178c31cf9b439374b96bd98c93e6d0053d91f45ce383380b8fbc5 SHA512 b361cb28eb043930e7babfb727e40a34f58f1c733cddf7227596618723519c162c98859d1f77a15fa151e58407645b0061abf7cb903936b9c65cdffeb8a30fc7 WHIRLPOOL 9e63d053c18243da53d8bc087da60d32dc8523185c4e0fca4ba9d171014bc788c21a6ad6e18acde57a65372b711676571a640f0b698aa415b92a6a7b7f91df3e
 DIST genpatches-3.16-4.extras.tar.xz 17660 SHA256 48e19245992eb3c476f1638f1395e67619bf6b44314a040e08d009cce3d01ee8 SHA512 cba451d240cb44067d7f20ecc1ab92e40b864fcb516e6d28d1f279db069bb7a785c9c78b3bed9047e13702cc46497dd5d520d503e798eb0aa8debe928a2293e1 WHIRLPOOL d328f842ec73e13009d96ce9a9c56a04f5f2b6072871585e40b49e0e8d71412e39c685a5c2861a4684cf880bf2a55c4359a57f515b348dbfce26f7ac5d31519e
+DIST genpatches-3.16-5.base.tar.xz 320236 SHA256 7013f6d4e37b7862d412399647b1f9814098321fdbadd6359b148ac2edac2e47 SHA512 b0b36543cd980622f80493b408912fd0860521daba7138b50edefe9dfe3599ff013207a5101ec50ef5c826853a74622b7db87da4fcd73a51de94c5ff9f11cf2e WHIRLPOOL a0026388e6d21209dbfa78a27e59b09bf0f8ebbf6d921fc7c95c7537233032b442528f0336830e2b4e3d3d89d53b7416c5cc7a11c8f63e769210e8f452e83347
+DIST genpatches-3.16-5.extras.tar.xz 17676 SHA256 4c4fc3529ca4e195e610e7d90e441d94c84b4fc8f7092eaa9a54cf7390a50aec SHA512 adace2f323c7b8e252514cabdb06edfeb0386373f0ed1bae4356e77c82f0a80eead467482a1c956bca5538e99cc3d09de75b4f323c0dbc240acf12c53e9b2161 WHIRLPOOL b1d0debfb60c241782885e0a8269ec4ce6578903e64ff8586a90b59cf6d09cac489452bfe2b6cacf334f0f98a529b6146f5f246e662b2f88d1aa58e3cc64bb89
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
 DIST linux-3.16.tar.xz 80501624 SHA256 4813ad7927a7d92e5339a873ab16201b242b2748934f12cb5df9ba2cfe1d77a0 SHA512 64033e741d3f42ed06010e63e69d66e1d3d9414ef20f76834508878d4218b72619541a18ef4fd377204af2859e52198310998109b20ed9b67722586b28c9a231 WHIRLPOOL 69e5e367751185ff4e8d7c1f23c6f1e8f547fe782f581f6cf5f0bde301fa922185c8b996b815cf19fb7f14ca64042e264e87d321872ee3096adad02b1015769b
