@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.16.4 (06 Oct 2014)
+
+  06 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.4.ebuild:
+  Bump to latest aufs3, genpatches and linux release
+
   23 Sep 2014; Justin Lecher <jlec@gentoo.org> Manifest:
   Fix checksums of changed files
 
